# apng

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
example/: Cargo.toml
example/src/: main.rs
examples/: .gitignore
examples/each_frame_speed/: Cargo.toml
examples/each_frame_speed/src/: main.rs
examples/encode_all/: Cargo.toml
examples/encode_all/src/: main.rs
src/: apng.rs  errors.rs  lib.rs  png.rs
