[package]
name = "apng"
version = "0.2.0"
authors = ["poccariswet <poccariswet2727@gmail.com>"]
edition = "2018"
description = "APNG Encoder. But it is tiny yet."
license = "MIT"
repository = "http://github.com/poccariswet/apng"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
png = "0.17.1"
thiserror = "1.0.29"
byteorder = "1.3.4"
flate2 = "1.0.22"
image = "0.24.3"
