[package]
name = "apng"
version = "0.3.1"
authors = ["poccariswet <poccariswet2727@gmail.com>"]
edition = "2021"
description = "APNG Encoder. But it is tiny yet."
license = "MIT"
repository = "https://github.com/poccariswet/apng"
readme = "README.md"

[dependencies]
png = "0.17.7"
thiserror = "1.0.38"
byteorder = "1.4.3"
flate2 = "1.0.25"
image = { version = "0.24.5", default-features = false, features = ["png"] }

[features]
# re-exports png crate
png = []
